Fixed share icon overlapping on file card

--- a/styles/file-states.less
+++ b/styles/file-states.less
@@ -1,6 +1,7 @@
 .file_states {
 	margin-top: -23px;
 	position: absolute;
+	z-index: 1;
 
 	.folder & {
 		margin-top: -35px;
